# runbook-copilot

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements-embeddings.txt  requirements-llm.txt  requirements.txt
app/: main.py
docs/: ANSWER_GENERATION_DECISION.md  DEBUG_CHECKLIST.md  DEVELOPMENT_TODO.md  KNOWLEDGE_STYLE_GUIDE.md  PRODUCTIZATION_DECISION.md  REAL_WORLD_SAMPLE_REPLAY.md  RERANKER_DECISION.md  SPECS.md  VECTOR_BACKEND_DECISION.md  WEBHOOK_INTEGRATION_DECISION.md
knowledge/: runbook-auth-service-faq.md  runbook-billing-api-rabbitmq.md  runbook-checkout-api.md  runbook-inventory-api-mongodb.md  runbook-notification-worker-kafka.md  runbook-order-service-redis.md  runbook-payment-service-postgres.md  runbook-platform-auth-permission-denied.md  runbook-platform-database-schema-contention.md  runbook-platform-deployment-config-rollback.md  runbook-platform-edge-proxy-5xx.md  runbook-platform-git-control-plane.md  runbook-platform-serverless-control-plane.md  runbook-platform-worker-queue-capacity.md  runbook-profile-service-clickhouse.md  runbook-search-api-elasticsearch.md  runbook-user-service-mysql.md
mock-service/: .gitignore  Dockerfile  build.gradle  settings.gradle
scripts/: compare_answer_generators.py  compare_vector_configs.py  ingest.py  lint_knowledge.py  run_real_world_alert_samples.py
tests/: test_answer_generator.py  test_api_debug.py  test_chunking.py  test_config.py  test_embedding_provider.py  test_evaluation.py  test_factory.py  test_grafana_adapter.py  test_knowledge_lint.py  test_productization.py  (+2 more)
(+42 files in other folders)
