[project]
name = "runbook-copilot"
version = "0.1.0"
description = "面向工程团队的 RAG 事故排障助手 MVP"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "pydantic>=2.6.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
]
embeddings = [
  "sentence-transformers>=2.7.0",
]
llm = [
  "openai>=1.100.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
